# ComfyUI_A1rSpace

./: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  a1r_api.py  config.json  config.json.template  pyproject.toml  requirements.txt
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
nodes/: config.py  models.py  node_config_pad.py  node_control_pad.py  node_controlnet.py  node_ksampler.py  node_loader.py  node_slider_custom.py  node_switch.py  node_tag_stack.py  node_text.py  node_upscale.py  node_utils.py  nodes_config.py  nodes_custom.py  nodes_ksampler.py  nodes_loader.py  nodes_switch.py  nodes_text.py  nodes_utils.py
nodes/JoyTag/: models.py  node_joytag.py
nodes/common/: __init__.py  config_loader.py  joytag_model.py  model_loader.py  shared_utils.py
nodes/config/: __init__.py  config_pads.py
nodes/images/: __init__.py  image_nodes.py
nodes/loaders/: __init__.py  checkpoint_loaders.py  controlnet_loader.py  lora_loaders.py
nodes/samplers/: __init__.py  unity_ksampler.py
nodes/text/: __init__.py  text_advanced.py  text_basic.py
nodes/transforms/: __init__.py  transform_nodes.py
nodes/utils/: __init__.py  util_nodes.py  util_observer.py
web/: crop_editor.html  index.js
web/css/: crop_editor.css
web/js/: ab_checkpoint.js  api_config.js  boolean_a_b.js  boolean_ab.js  boolean_to_int.js  bypass_disabled.js  collapse_outputs.js  collapse_slot.js  collector_nodemode.js  collector_widget.js  crop_editor.js  custom_boolean.js  custom_slider.js  draggable_list.js  image_crop.js  image_filter.js  image_save.js  image_save_preview.js  (+19 more)
